0030584: Modeling Algorithms, BRepFill_OffsetWire - access violation on Face having no boundaries

Added missing NULL and empty result checks.
Updated test cases using offset_wire_092.brep shape containing all Edges
with TopAbs_INTERNAL orientation (hense no boundary to make offset).